[gd_scene load_steps=5 format=3 uid="uid://v4pu84gypt3e"]

[ext_resource type="Script" path="res://Scripts/EnemySpawner.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://djbxm66ad3ocs" path="res://Scenes/Goblin.tscn" id="2"]
[ext_resource type="Script" path="res://Scripts/GoblinsGeneration.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://wixj88qmc85l" path="res://Scenes/Troll.tscn" id="4"]

[node name="EnemySpawner" type="Node" groups=["spawner_enemy"]]
script = ExtResource("1")
goblin_enemy_scene = ExtResource("2")
troll_enemy_scene = ExtResource("4")

[node name="SpawnTimer" type="Timer" parent="."]

[node name="GenerationTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="HudUpdateTimer" type="Timer" parent="."]

[node name="Goblins" type="Node" parent="." groups=["gobo_population"]]
script = ExtResource("3")

[node name="Trolls" type="Node" parent="." groups=["troll_population"]]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="GenerationTimer" to="." method="_on_GenerationTimer_timeout"]
[connection signal="timeout" from="HudUpdateTimer" to="." method="_on_HudUpdateTimer_timeout"]
